--- a/app/src/main/res/layout/viewpager_header.xml
+++ b/app/src/main/res/layout/viewpager_header.xml
@@ -1,38 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
-<android.support.v4.view.ViewPager
-    android:id="@+id/imagePagerHeader"
-    android:layout_width="match_parent"
-    android:layout_height="100dp"/>
-        <LinearLayout
-            android:layout_centerInParent="true"
-            android:layout_alignParentBottom="true"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <View
-                android:id="@+id/circle1"
-                android:background="@drawable/select_circle_image"
-                android:layout_width="8dp"
-                android:layout_height="8dp"
-                android:layout_marginLeft="2dip"
-                android:layout_marginRight="2dip"
-                />
-            <View
-                android:id="@+id/circle2"
-                android:background="@drawable/select_circle_image"
-                android:layout_width="8dp"
-                android:layout_height="8dp"
-                android:layout_marginLeft="2dip"
-                android:layout_marginRight="2dip"/>
-            <View
-                android:id="@+id/circle3"
-                android:background="@drawable/select_circle_image"
-                android:layout_width="8dp"
-                android:layout_height="8dp"
-                android:layout_marginLeft="2dip"
-                android:layout_marginRight="2dip"/>
-        </LinearLayout>
+    android:layout_height="180dp">
+    <android.support.v4.view.ViewPager
+        android:id="@+id/imagePagerHeader"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+    <LinearLayout
+        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <View
+            android:id="@+id/circle1"
+            android:background="@drawable/select_circle_image"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:layout_marginLeft="2dip"
+            android:layout_marginRight="2dip"
+            />
+        <View
+            android:id="@+id/circle2"
+            android:background="@drawable/select_circle_image"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:layout_marginLeft="2dip"
+            android:layout_marginRight="2dip"/>
+        <View
+            android:id="@+id/circle3"
+            android:background="@drawable/select_circle_image"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:layout_marginLeft="2dip"
+            android:layout_marginRight="2dip"/>
+    </LinearLayout>
 </RelativeLayout>
