--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
             android:layout_width="96dp"
             android:layout_height="96dp"
             app:civ_border_width="2dp"
-            android:src="@mipmap/ic_launcher"
+            android:src="@mipmap/ic_logo"
             app:civ_border_color="#ffffff"
             />
            <android.support.design.widget.TextInputLayout
