--- a/app/src/main/res/layout/item_images.xml
+++ b/app/src/main/res/layout/item_images.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<ImageView
+<com.android.volley.toolbox.NetworkImageView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/movieImageViewPagers"
     android:layout_width="match_parent"
-    android:layout_height="100dp" />
-</LinearLayout>
+    android:layout_height="match_parent"
+    />
