--- a/app/src/main/res/layout/recycler_foot.xml
+++ b/app/src/main/res/layout/recycler_foot.xml
@@ -4,23 +4,24 @@
     xmlns:card_view="http://schemas.android.com/tools"
     app:cardCornerRadius="4dp"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="wrap_content"
     android:foreground="?android:attr/selectableItemBackground"
     card_view:cardBackgroundColor="@color/cardview_light_background">
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:gravity="center"
-    android:layout_width="match_parent"
-    android:layout_height="50dp">
-    <ProgressBar
-        android:id="@+id/loadMore_pb"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/loadMore_tv"
-        android:text="正在加载数据"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/loadMore_linear"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+        <ProgressBar
+            android:id="@+id/loadMore_pb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/loadMore_tv"
+            android:text="正在加载数据"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 </android.support.v7.widget.CardView>
